Added redux store (with redux-logger, redux-persist, redux-offline and redux-saga packages)

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,5 +3,9 @@
   "integrations": {
     "cordova": {}
   },
-  "type": "angular"
+  "type": "angular",
+  "hooks": {
+    "serve:before": "./scripts/copy-custom-libs.js",
+    "build:before": "./scripts/copy-custom-libs.js"
+  }
 }
