--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "@redux-offline/redux-offline": "^2.5.1",
     "cordova-android": "8.0.0",
     "cordova-browser": "6.0.0",
