--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/globalization": "^5.5.0",
+    "@ionic-native/http": "^5.5.0",
+    "@ionic-native/native-storage": "^5.5.0",
+    "@ionic-native/network": "^5.5.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
@@ -31,6 +35,11 @@
     "cordova-android": "8.0.0",
     "cordova-browser": "6.0.0",
     "cordova-ios": "5.0.0",
+    "cordova-plugin-advanced-http": "2.0.9",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-globalization": "1.11.0",
+    "cordova-plugin-nativestorage": "2.3.2",
+    "cordova-plugin-network-information": "2.0.1",
     "core-js": "^2.5.4",
     "flux-standard-action": "^2.1.0",
     "redux": "^4.0.1",
@@ -81,7 +90,11 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-network-information": {},
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-globalization": {}
     },
     "platforms": [
       "ios",
