--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/diagnostic": "^5.5.0",
     "@ionic-native/globalization": "^5.5.0",
     "@ionic-native/http": "^5.5.0",
+    "@ionic-native/location-accuracy": "^5.5.0",
     "@ionic-native/native-storage": "^5.5.0",
     "@ionic-native/network": "^5.5.0",
+    "@ionic-native/screen-orientation": "^5.5.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
@@ -40,7 +43,11 @@
     "cordova-plugin-globalization": "1.11.0",
     "cordova-plugin-nativestorage": "2.3.2",
     "cordova-plugin-network-information": "2.0.1",
+    "cordova-plugin-request-location-accuracy": "2.2.3",
+    "cordova-plugin-screen-orientation": "3.0.1",
+    "cordova.plugins.diagnostic": "4.0.12",
     "core-js": "^2.5.4",
+    "es6-promise-plugin": "4.2.2",
     "flux-standard-action": "^2.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
@@ -94,7 +101,12 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-nativestorage": {},
       "cordova-plugin-advanced-http": {},
-      "cordova-plugin-globalization": {}
+      "cordova-plugin-globalization": {},
+      "cordova-plugin-screen-orientation": {},
+      "cordova.plugins.diagnostic": {
+        "ANDROID_SUPPORT_VERSION": "28.+"
+      },
+      "cordova-plugin-request-location-accuracy": {}
     },
     "platforms": [
       "ios",
