--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/camera-preview": "^5.5.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/device-motion": "^5.5.0",
     "@ionic-native/diagnostic": "^5.5.0",
@@ -41,6 +42,7 @@
     "cordova-browser": "6.0.0",
     "cordova-ios": "5.0.0",
     "cordova-plugin-advanced-http": "2.0.9",
+    "cordova-plugin-camera-preview": "0.10.0",
     "cordova-plugin-device-motion": "2.0.1",
     "cordova-plugin-file": "6.0.1",
     "cordova-plugin-globalization": "1.11.0",
@@ -114,7 +116,8 @@
       "cordova-plugin-request-location-accuracy": {},
       "cordova-plugin-device-motion": {},
       "cordova-plugin-gyroscope": {},
-      "cordova-plugin-magnetometer": {}
+      "cordova-plugin-magnetometer": {},
+      "cordova-plugin-camera-preview": {}
     },
     "platforms": [
       "ios",
