Adding some resources + fix on assets hooks

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -5,9 +5,13 @@
   },
   "type": "angular",
   "hooks": {
-    "serve:before": "./scripts/copy-custom-libs.js",
-    "build:before": "./scripts/copy-custom-libs.js",
-    "serve:before": "./scripts/redux-persist-react-fix.js",
-    "build:before": "./scripts/redux-persist-react-fix.js"
+    "serve:before": [
+      "./scripts/copy-custom-libs.js",
+      "./scripts/redux-persist-react-fix.js"
+    ],
+    "build:before": [
+      "./scripts/copy-custom-libs.js",
+      "./scripts/redux-persist-react-fix.js"
+    ]
   }
 }
