--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^9.0.6",
     "@angular/platform-browser-dynamic": "^9.0.6",
     "@angular/router": "^9.0.6",
+    "@asymmetrik/ngx-leaflet": "^6.0.1",
+    "@asymmetrik/ngx-leaflet-markercluster": "^3.0.0",
     "@ionic-native/camera-preview": "^5.22.0",
     "@ionic-native/core": "^5.22.0",
     "@ionic-native/device": "^5.22.0",
@@ -39,6 +41,8 @@
     "@ionic/angular": "^5.0.5",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@types/leaflet": "^1.5.11",
+    "@types/leaflet.markercluster": "^1.4.2",
     "cordova-android": "^8.1.0",
     "cordova-ios": "5.1.1",
     "cordova-plugin-advanced-http": "^2.4.1",
@@ -57,6 +61,8 @@
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "flux-standard-action": "^2.1.1",
+    "leaflet": "^1.6.0",
+    "leaflet.markercluster": "^1.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
