Updated github pages infos

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Ionic Location based Augmented Reality
+description: Ionic 5 location based augmented reality example app
