--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "AugmentedReality",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "author": "Simone Colazzo",
   "homepage": "https://github.com/KitCarson88",
   "scripts": {
@@ -16,38 +16,38 @@
   "dependencies": {
     "@angular-redux/router": "^10.0.0",
     "@angular-redux/store": "^10.0.0",
-    "@angular/common": "^9.0.6",
-    "@angular/core": "^9.0.6",
-    "@angular/forms": "^9.0.6",
-    "@angular/platform-browser": "^9.0.6",
-    "@angular/platform-browser-dynamic": "^9.0.6",
-    "@angular/router": "^9.0.6",
+    "@angular/common": "^10.1.3",
+    "@angular/core": "^10.1.3",
+    "@angular/forms": "^10.1.3",
+    "@angular/platform-browser": "^10.1.3",
+    "@angular/platform-browser-dynamic": "^10.1.3",
+    "@angular/router": "^10.1.3",
     "@asymmetrik/ngx-leaflet": "^6.0.1",
     "@asymmetrik/ngx-leaflet-markercluster": "^3.0.0",
-    "@ionic-native/camera-preview": "^5.22.0",
-    "@ionic-native/core": "^5.22.0",
-    "@ionic-native/device": "^5.22.0",
-    "@ionic-native/device-motion": "^5.22.0",
-    "@ionic-native/diagnostic": "^5.22.0",
-    "@ionic-native/geolocation": "^5.22.0",
-    "@ionic-native/globalization": "^5.22.0",
-    "@ionic-native/gyroscope": "^5.22.0",
-    "@ionic-native/http": "^5.22.0",
-    "@ionic-native/location-accuracy": "^5.22.0",
-    "@ionic-native/magnetometer": "^5.22.0",
-    "@ionic-native/native-storage": "^5.22.0",
-    "@ionic-native/network": "^5.22.0",
-    "@ionic-native/screen-orientation": "^5.22.0",
-    "@ionic-native/splash-screen": "^5.22.0",
-    "@ionic-native/status-bar": "^5.22.0",
-    "@ionic/angular": "^5.0.5",
+    "@ionic-native/camera-preview": "^5.28.0",
+    "@ionic-native/core": "^5.28.0",
+    "@ionic-native/device": "^5.28.0",
+    "@ionic-native/device-motion": "^5.28.0",
+    "@ionic-native/diagnostic": "^5.28.0",
+    "@ionic-native/geolocation": "^5.28.0",
+    "@ionic-native/globalization": "^5.28.0",
+    "@ionic-native/gyroscope": "^5.28.0",
+    "@ionic-native/http": "^5.28.0",
+    "@ionic-native/location-accuracy": "^5.28.0",
+    "@ionic-native/magnetometer": "^5.28.0",
+    "@ionic-native/native-storage": "^5.28.0",
+    "@ionic-native/network": "^5.28.0",
+    "@ionic-native/screen-orientation": "^5.28.0",
+    "@ionic-native/splash-screen": "^5.28.0",
+    "@ionic-native/status-bar": "^5.28.0",
+    "@ionic/angular": "^5.3.4",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
-    "@types/leaflet": "^1.5.11",
+    "@types/leaflet": "^1.5.17",
     "@types/leaflet.markercluster": "^1.4.2",
     "cordova-android": "^8.1.0",
-    "cordova-ios": "5.1.1",
-    "cordova-plugin-advanced-http": "^2.4.1",
+    "cordova-ios": "^5.1.1",
+    "cordova-plugin-advanced-http": "^2.5.1",
     "cordova-plugin-camera-preview": "^0.11.2",
     "cordova-plugin-device-motion": "^2.0.1",
     "cordova-plugin-file": "^6.0.2",
@@ -59,11 +59,11 @@
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
-    "cordova.plugins.diagnostic": "^5.0.1",
-    "core-js": "^2.5.4",
+    "cordova.plugins.diagnostic": "^5.0.2",
+    "core-js": "^2.6.11",
     "es6-promise-plugin": "^4.2.2",
     "flux-standard-action": "^2.1.1",
-    "leaflet": "^1.6.0",
+    "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -72,39 +72,39 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "~6.5.1",
-    "tslib": "^1.9.0",
+    "rxjs": "^6.5.5",
+    "tslib": "^1.13.0",
     "typeface-josefin-sans": "0.0.75",
-    "zone.js": "~0.10.2"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.6",
-    "@angular/cli": "^9.0.6",
-    "@angular/compiler": "^9.0.6",
-    "@angular/compiler-cli": "^9.0.6",
-    "@angular/language-service": "^9.0.6",
-    "@ionic/angular-toolkit": "^2.1.1",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "@angular-devkit/build-angular": "^0.1001.3",
+    "@angular/cli": "^10.1.3",
+    "@angular/compiler": "^10.1.3",
+    "@angular/compiler-cli": "^10.1.3",
+    "@angular/language-service": "^10.1.3",
+    "@ionic/angular-toolkit": "^2.3.3",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^8.9.5",
+    "codelyzer": "^5.2.2",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-ionic-webview": "^4.1.3",
-    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-splashscreen": "^5.0.4",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "jasmine-core": "^3.4.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
+    "ts-node": "^7.0.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.3"
   },
   "description": "An Ionic project",
   "cordova": {
