--- a/.gitignore
+++ b/.gitignore
@@ -3,41 +3,37 @@
 
 *~
 *.sw[mnpcod]
-*.log
+.tmp
 *.tmp
 *.tmp.*
-log.txt
 *.sublime-project
 *.sublime-workspace
-.vscode/
-npm-debug.log*
-
-.idea/
-.ionic/
-.sourcemaps/
-.sass-cache/
-.tmp/
-.versions/
-coverage/
-www/
-node_modules/
-tmp/
-temp/
-platforms/
-plugins/
-plugins/android.json
-plugins/ios.json
-$RECYCLE.BIN/
-
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
-package-lock.json
+$RECYCLE.BIN/
+
+*.log
+log.txt
+npm-debug.log*
+
+/.idea
+/.ionic
+/.sass-cache
+/.sourcemaps
+/.versions
+/.vscode
+/coverage
+/dist
+/node_modules
+/platforms
+/plugins
+/www
 
 # Custom rules
-src/assets/fonts/roboto
-src/assets/fonts/josefin
-resources/android/icon
-resources/android/splash
-resources/ios/icon
-resources/ios/splash
+#src/assets/fonts/roboto
+#src/assets/fonts/josefin
+#resources/android/icon
+#resources/android/splash
+#resources/ios/icon
+#resources/ios/splash
