--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@capacitor/android": "^2.4.2",
     "@capacitor/core": "^2.4.2",
+    "@capacitor/ios": "^2.4.2",
     "@ionic-native/core": "^5.28.0",
     "@ionic-native/splash-screen": "^5.28.0",
     "@ionic-native/status-bar": "^5.28.0",
