--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ionic-native/splash-screen": "^5.28.0",
     "@ionic-native/status-bar": "^5.28.0",
     "@ionic/angular": "^5.3.4",
+    "@redux-multipurpose/angular-router": "^1.0.2",
+    "@redux-multipurpose/core": "^1.4.13",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.1",
     "zone.js": "^0.10.3"
@@ -38,6 +40,7 @@
     "@angular/language-service": "~10.1.3",
     "@capacitor/cli": "^2.4.2",
     "@ionic/angular-toolkit": "^2.3.3",
+    "@redux-multipurpose/angular-cli": "^1.5.5",
     "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.62",
