--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^10.1.3",
     "@angular/common": "~10.1.3",
     "@angular/core": "~10.1.3",
     "@angular/forms": "~10.1.3",
@@ -22,12 +23,15 @@
     "@capacitor/android": "^2.4.2",
     "@capacitor/core": "^2.4.2",
     "@capacitor/ios": "^2.4.2",
+    "@ionic-native/app-version": "^5.28.0",
     "@ionic-native/core": "^5.28.0",
     "@ionic-native/splash-screen": "^5.28.0",
     "@ionic-native/status-bar": "^5.28.0",
     "@ionic/angular": "^5.3.4",
     "@redux-multipurpose/angular-router": "^1.0.2",
     "@redux-multipurpose/core": "^1.4.13",
+    "cordova-plugin-app-version": "^0.1.9",
+    "ionic-angular-utilities": "^1.0.2",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.1",
     "zone.js": "^0.10.3"
