--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "@capacitor/ios": "^2.4.2",
     "@ionic-native/app-version": "^5.28.0",
     "@ionic-native/core": "^5.28.0",
+    "@ionic-native/globalization": "^5.28.0",
     "@ionic-native/splash-screen": "^5.28.0",
     "@ionic-native/status-bar": "^5.28.0",
     "@ionic/angular": "^5.3.4",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@redux-multipurpose/angular-router": "^1.0.2",
     "@redux-multipurpose/core": "^1.4.13",
     "cordova-plugin-app-version": "^0.1.9",
+    "cordova-plugin-globalization": "^1.11.0",
     "ionic-angular-utilities": "^1.0.2",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.1",
