Added roboto and josefin sans fonts

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -3,5 +3,13 @@
   "integrations": {
     "capacitor": {}
   },
-  "type": "angular"
+  "type": "angular",
+  "hooks": {
+    "serve:before": [
+      "./scripts/copy-custom-libs.js"
+    ],
+    "build:before": [
+      "./scripts/copy-custom-libs.js"
+    ]
+  }
 }
