--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ npm-debug.log*
 package-lock.json
 
 # Custom rules
-#src/assets/fonts/roboto
-#src/assets/fonts/josefin
+src/assets/fonts/roboto
+src/assets/fonts/josefin
 #resources/android/icon
 #resources/android/splash
 #resources/ios/icon
