--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@asymmetrik/ngx-leaflet": "^8.1.0",
+    "@asymmetrik/ngx-leaflet-markercluster": "^5.0.0",
     "@capacitor/android": "^2.4.2",
     "@capacitor/core": "^2.4.2",
     "@capacitor/ios": "^2.4.2",
@@ -33,9 +35,13 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "@redux-multipurpose/angular-router": "^1.0.2",
     "@redux-multipurpose/core": "^1.4.13",
+    "@types/leaflet": "^1.5.17",
+    "@types/leaflet.markercluster": "^1.4.3",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-globalization": "^1.11.0",
     "ionic-angular-utilities": "^1.0.3",
+    "leaflet": "^1.7.1",
+    "leaflet.markercluster": "^1.4.1",
     "roboto-fontface": "^0.10.0",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.1",
