--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "clean": "rm -rf platforms/ plugins/ www/ node_modules/ package-lock.json"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +28,7 @@
     "@capacitor/ios": "^2.4.2",
     "@ionic-native/app-version": "^5.28.0",
     "@ionic-native/core": "^5.28.0",
+    "@ionic-native/diagnostic": "^5.28.0",
     "@ionic-native/globalization": "^5.28.0",
     "@ionic-native/splash-screen": "^5.28.0",
     "@ionic-native/status-bar": "^5.28.0",
@@ -39,7 +41,8 @@
     "@types/leaflet.markercluster": "^1.4.3",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-globalization": "^1.11.0",
-    "ionic-angular-utilities": "^1.0.3",
+    "cordova.plugins.diagnostic": "^6.0.2",
+    "ionic-angular-utilities": "^1.0.5",
     "leaflet": "^1.7.1",
     "leaflet.markercluster": "^1.4.1",
     "roboto-fontface": "^0.10.0",
